--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.db-jk_1.14.jar=src/db-jk_1.14.jar
+file.reference.db-jk_1.14.jar-1=lib/db-jk_1.14.jar
 file.reference.json-20140107.jar=json-20140107.jar
+file.reference.json-20140107.jar-1=lib/json-20140107.jar
 file.reference.mysql-connector-java-5.1.34-bin.jar=mysql-connector-java-5.1.34-bin.jar
+file.reference.mysql-connector-java-5.1.34-bin.jar-1=lib/mysql-connector-java-5.1.34-bin.jar
 file.reference.ShopFinder-bin=bin/
 file.reference.ShopFinder-src=src
 includes=**
@@ -39,7 +42,10 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.json-20140107.jar}:\
     ${file.reference.mysql-connector-java-5.1.34-bin.jar}:\
-    ${file.reference.db-jk_1.14.jar}
+    ${file.reference.db-jk_1.14.jar}:\
+    ${file.reference.db-jk_1.14.jar-1}:\
+    ${file.reference.json-20140107.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.34-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
